--- a/Practicas/Ej02/css/estilos.css
+++ b/Practicas/Ej02/css/estilos.css
@@ -1,10 +1,24 @@
 #encabezado{
-	padding-left: 100px;
+	padding-left: 120px;
 	font-family: cambria;
 	font-size: 25px;
 }
 a{
 	font-size: 14px;
 	font-family: arial;
-	color: #5858FA;
+}
+.bloque1{
+	font-size: 14px;
+	font-family: arial;
+	color: #000000;
+}
+
+#fecha{
+	font-size: 13px;
+	font-family: arial;
+	color: #A4A4A4;
+}
+
+#texto{
+	text-align: justify;
 }
