--- a/TPs/TP3/css/estilos.css
+++ b/TPs/TP3/css/estilos.css
@@ -6,31 +6,26 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 #contenedor{
-    width: 80%;
+    width: 90%;
     margin: auto;
-    padding-top: 5%;
     display: flex;
 }
 #izquierda{
     width: 45%;
 }
 h1{
-    font-size: 50px;
+    font-size: 55px;
     color: #b51f21;
     font-family: 'Noto Serif', serif;
 }
 #instrucciones{
     margin-top: 20px;
-    width: 70%;
 }
 h2{
     font-size: 30px;
     color: #2b060d
 }
-p{
-    text-align: initial;
-}
-#derecha    {
+#izquierda{
     width: 50%; 
     height: 100%;;
 }
@@ -53,11 +48,4 @@ p{
 }
 .noPointer{
     pointer-events: none;
-}
-
-/*********** RESPONSIVE **************/
-@media (max-width: 980px){
-    #contenedor{
-        flex-direction: column;
-    }
 }
