--- a/TPs/TP5/views/filtered.pug
+++ b/TPs/TP5/views/filtered.pug
@@ -3,9 +3,9 @@ extends layout
 block content
     #genreCont
         h1=title
-        #genreMain
-            for genero in genreFilter
+        #filterMain
+            for filtro in filter
                 figure.moviefig
-                    img(src="../images/"+genero.poster)
-                    figcaption.movietitle= genero.movietitle
-                    a(href='../movies/'+genero.id) Ver mas
+                    img(src="../images/"+filtro.poster)
+                    figcaption.movietitle= filtro.movietitle
+                    a(href='../movies/'+filtro.id) Ver mas
