--- a/TPs/TP5/views/movies.pug
+++ b/TPs/TP5/views/movies.pug
@@ -10,6 +10,10 @@ block content
                 select(name="generos" id="generos")
                     for genero in genre
                         option(value=genero) #{genero}
+                label Rate: 
+                select(name="rates" id="rates")
+                    for rates in rate
+                        option(value=rates) #{rates}
                 input#filtrar(type='submit' value='Filter')
         #derecha
             for pelicula in movie
