--- a/TPs/TP5/views/moviedetails.pug
+++ b/TPs/TP5/views/moviedetails.pug
@@ -5,7 +5,7 @@ block content
         h1=title
         #detailsMain
             div.detailsDiv
-                img(src="../images/"+movie.poster)
+                img(src="/images/"+movie.poster)
             div.detailsDiv
                 h2=movie.movietitle
                 p#director Director: #{movie.director}
