--- a/TPs/TP5/public/stylesheets/style.css
+++ b/TPs/TP5/public/stylesheets/style.css
@@ -2,18 +2,24 @@ body {
   padding: 0;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
   background-color: #4a5968;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 /******* INDEX PUG *******/
 #contenedor{
   width: 40%;
   margin: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 h1{
   font-size: 40px;
   color: #fff;
   text-align: center;
 }
-#search{
+#search, select{
   width: 100%;
   height: 40px;
   font-size: 18px;
@@ -21,7 +27,7 @@ h1{
   text-align: center;
   border-radius: 4px;
 }
-#btnSearch, #explorar{
+#btnSearch, #explorar, #filtrar{
   width: 100%;
   height: 35px;
   margin-top: 5px; 
@@ -31,17 +37,30 @@ h1{
   border-radius: 4px;
   border: none;
 }
-/******* PELICULAS PUG *******/
+/******* MOVIES PUG *******/
 #container{
   width: 90%;
   margin: auto;
+  display: flex;
+}
+#main{
   display: flex;
 }
 #izquierda{
   width: 30%;
   padding: 20px 0;
 }
-#derecha, #filterMain{
+#izquierda form{
+  display: flex;
+  flex-direction: column;
+}
+.movieslbl{
+  color: #ffffff;
+  display: block;
+  font-size: 18px;
+  margin: 5px 0;
+}
+#derecha, #filterMain, .searchMain{
   width: 70%;
   display: flex;
   flex-wrap: wrap;
@@ -49,8 +68,29 @@ h1{
 .moviefig img{
   width: 150px;
 }
+figcaption{
+  margin-bottom: 10px;
+}
+a{
+  text-decoration: none;
+  color: black;
+  width: 100%;
+  height: 35px;
+  padding: 5px 8px;
+  font-size: 13px;
+  background-color: #9696cb;
+  border-radius: 4px;
+  border: none;
+}
 .movietitle{
   color: #fff;
+}
+#pagination{
+  width: 50%;
+  margin: auto;
+}
+.page-link{
+  margin: 2px;
 }
 /******* DETAILS PUG *******/
 #detailsCont{
@@ -73,4 +113,8 @@ h2, p{
 #director{
   font-weight: bold;
 }
-
+/******* FILTERED PUG *******/
+#filterMain{
+  width: 95%;
+  margin: auto;
+}
