--- a/TPs/TP5/views/layout.pug
+++ b/TPs/TP5/views/layout.pug
@@ -2,6 +2,8 @@ doctype html
 html
   head
     title= title
+    script(src='javascripts/jquery-3.3.1.min.js')
+    script(src='javascripts/script.js')
     link(rel='stylesheet' href='https://use.fontawesome.com/releases/v5.0.13/css/all.css' integrity='sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp' crossorigin='anonymous')
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
