--- a/TPs/TP5/views/index.pug
+++ b/TPs/TP5/views/index.pug
@@ -2,7 +2,8 @@ extends layout
 
 block content
   #contenedor
-    h1= title
+      nav
+        h1= title
       form
         input#search(type='text' name='Search' placeholder='Search title or director')
         button#btnSearch Search
