--- a/TPs/TP5/public/stylesheets/style.css
+++ b/TPs/TP5/public/stylesheets/style.css
@@ -70,7 +70,7 @@ nav{
   text-align: center;
   border-radius: 4px;
 }
-#btnSearch, #explorar, #filtrar{
+#btnSearch, #explorar, #filtrar, #watched{
   width: 100%;
   height: 35px;
   margin-top: 5px; 
@@ -117,6 +117,42 @@ nav{
 figcaption{
   margin-bottom: 10px;
 }
+.movietitle{
+  color: #fff;
+}
+#moviesbtn{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.view-more{ 
+  color: black;
+  width: auto;
+  height: 30px;
+  padding: 5px 8px;
+  font-size: 13px;
+  background-color: #9696cb;
+  border-radius: 4px;
+  border: none;
+}
+.fa-eye{
+  font-size: 25px;
+  color: #ffffff;
+}
+.fa-eye:hover{
+  color: #9696cb;
+}
+.watched{
+  color: #9696cb;
+}
+#pagination{
+  width: 100%;
+  height: 35px;
+  background-color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .fakebtn{
   text-decoration: none;
   color: black;
@@ -127,17 +163,6 @@ figcaption{
   background-color: #9696cb;
   border-radius: 4px;
   border: none;
-}
-.movietitle{
-  color: #fff;
-}
-#pagination{
-  width: 100%;
-  height: 35px;
-  background-color: black;
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
 .page-link{
   margin: 0 2px;
@@ -151,29 +176,35 @@ figcaption{
   display: flex;
   justify-content: space-between;
 }
-.detailsDiv{
+#detailsDiv{
   width: 50%;
 }
-.detailsDiv img{
-  width: 80%;
+#detailsDiv img{
+  width: 90%;
+}
+#detailsinfo{
+  width: 50%;
+  height: 250px;
+  padding: 10px 20px;
+  display: flex;
+  flex-direction: column;
+  align-content: space-between;
 }
 h2, p{
   color: #fff;
+  margin-bottom: 10px;
 }
-#director{
+#director, #release{
+  font-size: 16px;
   font-weight: bold;
 }
-#detailsbtn{
-  width: 30%;
-  display: flex;
-  justify-content: space-between;
-}
-#detailsbtn p{
-  font-size: 25px;
-}
 /******* FILTERED PUG *******/
-#filterMain{
+#filterMain, #mainWatched{
   width: 95%;
   margin: auto;
   display: flex;
+}
+/******* WATCHED PUG *******/
+#contWatched h2{
+  margin: 10px 15px
 }
