--- a/TPs/TP5/views/movies.pug
+++ b/TPs/TP5/views/movies.pug
@@ -35,7 +35,7 @@ block content
                                 i(class="fa fa-eye watched" data-id=pelicula.poster)
                             else
                                 i(class="fa fa-eye" data-id=pelicula.poster)
-        footer
+        #pagination
             #pages
                 - var p = 1
                     while p <= totalPages
