--- a/TPs/TP5/public/stylesheets/style.css
+++ b/TPs/TP5/public/stylesheets/style.css
@@ -5,19 +5,20 @@
 }
 body {
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-  background-color: #4a5968;
+  background-color: #000000;
+  padding: 0 15%;
 }
 nav{
-  widows: 100%;
-  height: 50px;
+  width: 100%;
+  height: 80px;
   background-color: black;
   display: flex;
   justify-content: space-around;
   align-items: center;
 }
 #breadcrumb{
-  width: 30%;
-  margin-left: 10%;
+  width: 50%;
+  margin-left: 8%;
 }
 #breadcrumb a{
   text-decoration: none;
@@ -32,6 +33,7 @@ nav{
 }
 #breadcrumb p{
   display: inline;
+  color: #ffffff;
 }
 #title{
   width: 70%;
@@ -44,22 +46,26 @@ nav{
 }
 /******* INDEX PUG *******/
 #contenedor{
+  background-color: #ffffff;
   width: 100%;
+  height: 65vh;
   margin: auto;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-}
-#contenedor nav{
-  margin-bottom: 15px;
 }
 #contenedor h1{
   font-size: 40px;
   color: #fff;
   text-align: center;
 }
-#contenedor form{
-  width: 30%;
+#mainidex{
+  margin: 5px;
+  padding: 15% 10%;
+  border-top: 2px solid #000000;
+  border-bottom: 2px solid #000000;
+}
+#mainidex form{
+  width: 40%;
   margin: auto;
 }
 #search, select{
@@ -68,7 +74,7 @@ nav{
   font-size: 18px;
   padding-left: 7px;
   text-align: center;
-  border-radius: 4px;
+  border: 2px solid #000000;
 }
 #btnSearch, #explorar, #filtrar, #watched{
   width: 100%;
@@ -76,38 +82,41 @@ nav{
   margin-top: 5px; 
   padding: 0 10px;
   font-size: 18px;
-  background-color: #9696cb;
-  border-radius: 4px;
+  color: #ffffff;
+  background-color: #000000;
   border: none;
 }
 /******* MOVIES PUG *******/
 #container{
+  background-color: #ffffff;  
   width: 100%;
   display: flex;
   flex-direction: column; 
 }
 #main{
-  width: 80%;
+  width: 90%;
   margin: 10px auto;
   display: flex;
 }
 #izquierda{
-  width: 40%;
-  padding: 20px 0;
+  width: 30%;
+  padding: 10px 0;
+  margin-right: 15px;
+  border-right: 2px solid #000000;
 }
 #izquierda form{
-  width: 50%;
+  width: 80%;
   display: flex;
   flex-direction: column;
 }
 .movieslbl{
-  color: #ffffff;
+  color: #000000;
   display: block;
   font-size: 18px;
   margin: 5px 0;
 }
 #derecha, .searchMain{
-  width: 60%;
+  width: 70%;
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
@@ -118,39 +127,44 @@ nav{
 .moviefig img{
   width: 150px;
   height: 212px;
+  padding-top: 5px;
+  border-top: 2px solid #000000;
+  padding-bottom: 5px;
+  border-bottom: 2px solid #000000;
 }
 figcaption{
-  margin-bottom: 10px;
+  margin-bottom: 5px;
 }
 .movietitle{
-  color: #fff;
+  color: #000000;
 }
 #moviesbtn{
+  padding: 0 5px;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 .view-more{ 
-  color: black;
   width: auto;
   height: 30px;
   padding: 5px 8px;
   font-size: 13px;
-  background-color: #9696cb;
-  border-radius: 4px;
+  color: #ffffff;
+  background-color: #000000;
   border: none;
 }
 .fa-eye{
   font-size: 25px;
-  color: #ffffff;
+  color: #c0c0c0;
+  margin-right: 10px;
 }
 .fa-eye:hover{
-  color: #9696cb;
+  color: #000000;
 }
 .watched{
-  color: #9696cb;
+  color: #000000;
 }
-footer{
+#pagination{
   width: 100%;
   height: 35px;
   background-color: black;
@@ -161,31 +175,39 @@ footer{
 .fakebtn{
   text-decoration: none;
   color: black;
+  font-weight: bold;
   width: 100%;
   height: 35px;
   padding: 5px 8px;
   font-size: 13px;
-  background-color: #9696cb;
-  border-radius: 4px;
-  border: none;
+  background-color: #ffffff;
 }
 .page-link{
   margin: 0 2px;
 }
 /******* DETAILS PUG *******/
 #detailsCont{
-  width: 60%;
+  width: 100%;
+  height: 75vh;
   margin: 5% auto;
 }
 #detailsMain{
+  width: 100%;
+  padding: 5%;
+  background-color: #ffffff;
   display: flex;
   justify-content: space-between;
 }
 #detailsDiv{
   width: 50%;
+  padding: 10px 0;
+  margin-right: 15px;
+  border-right: 2px solid #000000;
+  text-align: center;
 }
 #detailsDiv img{
-  width: 90%;
+  width: 60%;
+  margin: auto;
 }
 #detailsinfo{
   width: 50%;
@@ -196,26 +218,48 @@ footer{
   align-content: space-between;
 }
 h2, p{
-  color: #fff;
+  color: #000000;
   margin-bottom: 10px;
 }
 #director, #release{
   font-size: 16px;
   font-weight: bold;
 }
+#synopsis{
+  width: 270px;
+}
 /******* FILTERED PUG *******/
-#filterMain, #mainWatched{
-  width: 95%;
+#filterMain{
+  width: 100%;
+  background-color: #ffffff;
   margin: auto;
   display: flex;
+  flex-wrap: wrap;
 }
 /******* WATCHED PUG *******/
 #contWatched h2{
+  color: #ffffff;
   margin: 10px 15px
 }
+#mainWatched{
+  margin: auto;
+  background-color: #ffffff;
+}
+#watcheddiv{
+  width: 95%;
+  margin: auto;
+  display: flex;
+  flex-wrap: wrap;
+}
 /******* ERROR PUG *******/
+#contError{
+  height: 75vh;
+  background-color: #ffffff;
+}
 #mainError{
-  margin-top: 10%;
+  padding-top: 10%;
+  margin: 5px;
+  border-top: 2px solid #000000;
   display: flex;
   justify-content: center;
 }
