--- a/TPs/TP5/public/stylesheets/style.css
+++ b/TPs/TP5/public/stylesheets/style.css
@@ -48,7 +48,7 @@ nav{
 #contenedor{
   background-color: #ffffff;
   width: 100%;
-  height: 65vh;
+  height: 75 vh;
   margin: auto;
   display: flex;
   flex-direction: column;
@@ -247,6 +247,14 @@ h2, p{
 }
 #watcheddiv{
   width: 95%;
+  margin: auto;
+  display: flex;
+  flex-wrap: wrap;
+}
+/******* SEARCH PUG *******/
+#searchMain{
+  width: 100%;
+  background-color: #ffffff;
   margin: auto;
   display: flex;
   flex-wrap: wrap;
