--- a/Practicas/Modulo6/04-integrador_react/src/components/css/Header.css
+++ b/Practicas/Modulo6/04-integrador_react/src/components/css/Header.css
@@ -5,23 +5,35 @@ nav{
     display: flex;
     justify-content: space-between;
     padding: 50px 150px;
+    position: relative;
 }
 #navicons{
  width: 40%;
 }
 #profilediv{
-    width: 60%;
+    width: 55%;
     margin: auto;
-    display: flex; 
+    display: flex;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -65%);
 }
 figure{
     width: 40%;
 }
+figure img{
+    width: 100%;
+}
 #profiledata{
     width: 60%;
+    background-color: white;
     display: flex;
     flex-direction: column;
-    align-items: space-around;
+    align-items: space-between;
+}
+#titulo, table, #profileicon{
+    height: 41%;
 }
 #profileicons #social{
     background-color: #008040;
