--- a/ProyectoFinal/client/src/App.css
+++ b/ProyectoFinal/client/src/App.css
@@ -1,17 +1,11 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+  background-color: #eeeeee;
 }
 
 .App-header {
   background-color: #222;
-  height: 50px;
-  padding: 20px;
-  color: white;
+  padding: 10px 0px;
 }
 
 .App-title {
@@ -21,6 +15,7 @@
 .App-intro {
   font-size: large;
 }
+
 
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
